# example-package-lish

./: README.md  package_distribution  pyproject.toml
example_package_lish-0.1.1.dist-info/: METADATA  RECORD
tests/: test_rescale.py
